Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12184

Android: REG: Cannot select ant script using dialog box on Mac OS X

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 3.1.1
    • Qt Creator 3.1.1
    • Android Support
    • None
    • e90b0c128e33dfe7debf4ffce79aedf57ab07ecf

      On Mac, when I click "Choose" next to the ant script line edit and navigate to the $ANTPATH/bin directory, the "ant" script is disabled so I cannot select it. Instead I have to input the whole path manually in the line edit. I think this is a regression from earlier versions.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            portale Alessandro Portale
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes