Android/Ant selection: Work around file dialog bug on Mac

Task-number: QTCREATORBUG-12184

Change-Id: I2cb7c1549fc2201d4fbe163eb321b0ef11cc8a06
Reviewed-by: Alessandro Portale <alessandro.portale@digia.com>
Reviewed-by: Daniel Teske <daniel.teske@digia.com>